# custom-set-cpp

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md
.github/workflows/: ci.yaml
include/: Set.hpp  base_entities.hpp  iterators.hpp  redblacktree.hpp
linters/: run.sh  suppress.txt
tests/: CMakeLists.txt  base_tests.cpp  base_tests.h  helpers.cpp  helpers.h  tests.hpp  unittests.cpp
